# polylith-example

example/: docker-compose.yaml  pyproject.toml
example/example/bases/my_namespace/example_api/: __init__.py  core.py  rabbit_router.py
example/example/bases/my_namespace/example_worker/: __init__.py  core.py
example/example/components/my_namespace/events/: __init__.py  core.py
example/example/development/: dev.dockerfile
example/example/test/bases/my_namespace/example-worker/: test_core.py
example/example/test/bases/my_namespace/example_api/: test_core.py
example/example/test/components/my_namespace/events/: test_core.py
